# regi-python

./: .gitignore  Dockerfile  Dockerfile-cwbi-copy.dockerfile  LICENSE  MAINTAINERS.md  README.md  build.gradle  datasources.yaml  docker-compose-cwbi.yml  docker-compose.yml  gradle.properties  otel-config.yaml  settings.gradle
.teamcity/: pom.xml  settings.kts
cwbi-docker/: entrypoint.sh  requirements.txt
district scripts/SWF/: GateFlow5.py  GateFlow_MonthlyPumpBackFill.py  GateSettings.py  InflowCalcComputeEvapAsFlow.py  InflowCalcComputedInflow.py
district scripts/SWL/: Big3-InflowCalcMultipleActions.py  WhiteR-GateFlow.py
district scripts/SWT/: GateFlowGroup1.py  GateFlowGroup3.py  GateFlowGroup4.py  GateFlowGroup5.py  GateFlowGroup6.py
district-scripts/SWF/: GateFlow_PumpBackFill.py
district-scripts/SWL/: Big3-GateFlow.py  Millwd-Tri-Lks-GateFlow.py  Millwd-Tri-Lks-InflowCalcMultipleActions.py  WhiteR-InflowCalcMultipleActions.py
district-scripts/SWT/: GateFlowGroup2.py  GateFlowGroup7.py  GateFlowGroup8.py  GateFlowGroup9.py  GateFlowHUDS-WS.py
docs/: API_TO_REMOVE.md  PUBLIC_API.md  PUBLIC_API_RECOMMENDATIONS.md  SCRIPT_COMPATABILITY.md  SCRIPT_RECOMMENDATIONS.md
gradle/: libs.versions.toml
gradle/docs/: jpype.puml
install/RegiHeadless/: flow.config  (+4 more)
regi-headless/: build.gradle
regi-headless-installer-common/: build.gradle
regi-headless-installer-solaris/: build.gradle
regi-headless-installer-windows/: build.gradle
regi-headless/src/main/python/: pyproject.toml
regi-headless/src/main/python/regi_cli/: __init__.py  regi_cli.py
(+285 files in other folders)
