[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "regi-cli"
version = "@VERSION@"
description = "USACE Regi-Headless Python Bridge"
dependencies = [
    "JPype1>=1.4.1",
]

[tool.setuptools]
packages = ["regi_cli"]

[tool.setuptools.package-data]
"regi_cli" = ["lib/*.jar"]